    1     devs  WARN: ADC input not connected
    1   sensor  ADC value / light intensity conversion tables
    1   energy  Report energy counts in amp-hours
    2     core  Reverse mapping (instr -> addresses) to simplify monitors
    2    probe  Event profiler that collects min, max, mean statistics

----------------------------------- Completed -----------------------------------------
    2     devs  Added Medium implementation                                  1.7.093
    1      sim  [Sascha Silbe] Allow loading of EEPROM image from a file     1.7.086
    1   probes  Added SPIForwarder and SPIMonitor                            1.7.078
    1   probes  [Sascha Silbe] added support for multiple USART connx        1.7.077
    1   probes  Added VirgilMonitor for watching for Virgil-level exceptions 1.7.076
    1     devs  Added ATMega169 from Anttu Koski                             1.7.070
    2     devs  Added new versions of ATMega, ATMegaTimer                    1.7.066
    1     devs  Added first version of ATMegaTimer class                     1.7.065
    2    probe  Implemented CallTrace and CallStack utilities for probes     1.7.057
    2    probe  [John Regehr] added Break, Icall, Print, etc monitors        1.7.056
    1    input  ELF format loads symbols for use in monitors                 1.7.056
    1    probe  Implement stack change probe that uses probes, watches       1.7.038
  2-3    input  ELF format reader                                            1.7.xxx
    1    probe  Added simplest interactive monitor                           1.5.118
    1      sim  Automatically patch node ID for TinyOS and SOS               1.5.116
    1      sim  [Bastian Schlich] ATMega16 device added                      1.5.109
  2-3      sim  Full support for ATMega32 device                             1.5.105
    1     devs  Added lightsensor, RandomSensorData                          1.5.103